# pyconf-hyd-2025

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  readme.md
authentication/: serializers.py  urls.py  views.py
pyconfhyd/: asgi.py  settings.py  urls.py  wsgi.py
tests/factories/: item.py  list.py  user.py
tests/test_todo/: test_list_creation.py
todo/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_rename_todo_list_item_list.py
